PI-3766 - Enable annotation processing for Lombok